test/test_suite/errors/rethrow.c3t
// #target: x64-darwin

func void! test()
{
    int! i;
    i!!;
}

// #expect: rethrow.ll

entry:
 %i = alloca i32, align 4
  %i.f = alloca %error_union, align 8
  %error_var = alloca %error_union, align 8
  %tempcoerce = alloca { i64, i64 }, align 8
  %tempaddr = alloca %error_union, align 8
  %tempcoerce1 = alloca { i64, i64 }, align 8
  store %error_union zeroinitializer, %error_union* %i.f, align 8
  store i32 0, i32* %i, align 4
  %err_domain = getelementptr inbounds %error_union, %error_union* %i.f, i32 0, i32 0
  %0 = load i64, i64* %err_domain, align 8
  %not_err = icmp eq i64 %0, 0
  br i1 %not_err, label %after_check, label %error

error:
  %1 = bitcast %error_union* %error_var to i8*
  %2 = bitcast %error_union* %i.f to i8*
  call void @llvm.memcpy.p0i8.p0i8.i32(i8* align 8 %1, i8* align 8 %2, i32 16, i1 false)
  br label %guard_block

after_check:
  %3 = load i32, i32* %i, align 4
  br label %noerr_block

guard_block:                                      ; preds = %error
  %4 = bitcast { i64, i64 }* %tempcoerce to i8*
  %5 = bitcast %error_union* %error_var to i8*
  call void @llvm.memcpy.p0i8.p0i8.i32(i8* align 8 %4, i8* align 8 %5, i32 16, i1 false)
  %6 = load { i64, i64 }, { i64, i64 }* %tempcoerce, align 8
  ret { i64, i64 } %6

noerr_block:                                      ; preds = %after_check
  store %error_union zeroinitializer, %error_union* %tempaddr, align 8
  %7 = bitcast { i64, i64 }* %tempcoerce1 to i8*
  %8 = bitcast %error_union* %tempaddr to i8*
  call void @llvm.memcpy.p0i8.p0i8.i32(i8* align 8 %7, i8* align 8 %8, i32 16, i1 false)
  %9 = load { i64, i64 }, { i64, i64 }* %tempcoerce1, align 8
  ret { i64, i64 } %9
}